--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -20,6 +20,7 @@ html {
 
 body {
     font-family: 'Poppins', sans-serif;
+    font-weight: 300;
 }
 
 img {
@@ -28,6 +29,7 @@ img {
 }
 
 button {
+    background: none;
     cursor: pointer;
     border: none;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
