--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -36,3 +36,12 @@ button {
 button:not(.card__playlist-button) {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+/* Utility Classes */
+.hidden {
+    display: none;
+}
+
+.block {
+    display: block;
+}
