--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -29,7 +29,6 @@ img {
 
 button {
     background: none;
-    cursor: pointer;
     border: none;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -41,4 +40,10 @@ button {
 
 .block {
     display: block;
+}
+
+@media (min-width: 992px) {
+    button {
+        cursor: pointer;
+    }
 }
