--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -33,6 +33,15 @@ button {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+/* Animations */
+@keyframes fade {
+    from {
+        opacity: 0;
+    } to {
+        opacity: 1;
+    }
+}
+
 /* Utility Classes */
 .hidden {
     display: none;
